# serving-llm-from-flask

./: .gitignore  Makefile  README.md  credetials.template  pyproject.toml  using_flask.py
app/: main.py  patched.py
app/apis/: q_and_a.py
app/models/: schemas.py
app/repositories/: query_stuff.py
app/service/: service.py
app/utils/: config.py  init_chain.py  init_chromadb.py
